--- a/kv/templates/home.html
+++ b/kv/templates/home.html
@@ -9,7 +9,9 @@
             {% csrf_token %}
         </form>
         <table id="id_list_table">
-            <tr><td>1: {{ new_item_lastname }}</td></tr>
+            {% for item in items %}
+                <tr><td>{{ forloop.counter }}: {{ item.lastname }}</td></tr>
+            {% endfor %}
         </table>
     </body>
 </html>
