Item changed to tenant tests OK with that change
Estates empty module added, empty template and no unitests

--- a/kv/templates/home.html
+++ b/kv/templates/home.html
@@ -5,12 +5,12 @@
     <body>
         <h1>Rentnikud</h1>
         <form method="POST">
-            <input name="item_lastname" id="id_new_item" placeholder="Sisesta rentniku nimi" />
+            <input name="tenant_lastname" id="id_new_tenant" placeholder="Sisesta rentniku nimi" />
             {% csrf_token %}
         </form>
         <table id="id_list_table">
-            {% for item in items %}
-                <tr><td>{{ forloop.counter }}: {{ item.lastname }}</td></tr>
+            {% for tenant in tenants %}
+                <tr><td>{{ forloop.counter }}: {{ tenant.lastname }}</td></tr>
             {% endfor %}
         </table>
     </body>
